fix: replace DatatypeConverter by Base64 for Java 11 compatibility